@@ -1,3 +1,12 @@
+2010-01-31  Patrick Gansterer  <paroga@paroga.com>
+
+        Reviewed by Darin Adler.
+
+        Buildfix for WinCE + style fixes (TLS_OUT_OF_INDEXES is not defined).
+        https://bugs.webkit.org/show_bug.cgi?id=34380
+
+        * wtf/ThreadSpecific.h:
+
 2010-01-31  Kent Tamura  <tkent@chromium.org>
 
         Reviewed by Darin Adler.
